Reverted to revision 285222 by [[Special:Contributions/37.162.70.133|37.162.70.133]] ([[User talk:37.162.70.133|talk]]) (TwinkleGlobal)

--- a/Justin_Bieber.mw
+++ b/Justin_Bieber.mw
@@ -1,7 +1,7 @@
 {{Infobox zanger
-| naam           = Amani bieber 
+| naam           = Justin Bieber
 | ofbeelding     = Justin_Bieber_in_2015.jpg
-| umschrieving   = Elia trigger (2015)
+| umschrieving   = Justin Bieber (2015)
 | geboren        = [[1 meert|1meart]] [[1994]]
 | sturven        =
 | genre          = [[Popmuziek]], [[R&B]]
@@ -13,7 +13,7 @@
 
 Meart 2010 köm Bieber met zin eerste lange studio album, ''My World 2.0''. t Köm in verskeaidene laandn meteen in de top 10 en wör ook platina in de VS. Doarop volgen de wearldwiede top-10 single ''Baby'', wat vandaag n dag t meestbekekn en -besprökn YouTube-filmken is.<ref>[http://www.readwriteweb.com/archives/top_10_youtube_videos_of_all_time.php Readwriteweb.com. Top 10 YouTube Videos of All Time.] 9 februwoari 2011. Bekekn op 24 februwoari 2011</ref> Meteen doarop köm he met nen konsertriege (de ''My world Tour''), de remixalbums ''My Worlds Acoustic'' en ''Never Say Never - The Remixes'', en de 3D biopies-konsertfilm ''Justin Bieber: Never Say Never'' - wat in t eerste wekneande ne opbrengst har wat kort an t rekord köm vuur best-bezochten konsertfilm. Zin tweede album, ''Under the Mistletoe'', gavn he oet in november 2011, wat op nommer 1 in de ''Billboard'' 200 hitlieste köm.
 
-Bieber hef al verskeaidene oonderskeaidingn op naam, zo as de Artiest van t Joar op de [[American Music Awards 2010]], en is völle an eweezn vuur oonderskeaidings, zo as vuur de [[Grammy Awards|Grammy]]'s vuur Bestn Niejn Artiest en Beste Pop Vocal Album.
+Bieber hef al verskeaidene oonderskeaidingn op naam, zo as de Artiest van t Joar op de [[American Music Awards 2010]], en is völle an eweezn vuur oonderskeaidings, zo as vuur de [[Grammy Awards|Grammy]]'s vuur Bestn Niejn Artiest en Beste Pop Vocal Album. 
 
 == Verwiezings ==
 <references/>
