--- a/Etiopie.mw
+++ b/Etiopie.mw
@@ -40,7 +40,7 @@ De etiopiske natuur büdt starke natuurlike teagenstellingen. Et westen is vrüc
 
 In de jåren söäventig en tachtig van de 20. eywe kreag Etiopie nen [[Etiopisken Börgeroorlog|börgeroorlog]] en kommunistiske terrööranvallen te verduren, wårdöär de [[ekonomie|ekonomy]] klappen kreag. Et land hevt nu de gröätste ekonomy (BBP) an Oustafrika.<ref>[http://nazret.com/blog/index.php/2010/02/06/ethiopia_surpasses_kenya_to_become_east_  Nazret.com. "Ethiopia surpasses Kenya to become East Africa's Biggest Economy". Skreaven up 6 february 2010.] Bekeaken up 2 juni 2010.</ref>
 
-==Referensys==
+==Verwysingen==
 <references/>
 
 [[Kategorie: Tweants artikel]]
