--- a/Virtuele_warkelikheid.mw
+++ b/Virtuele_warkelikheid.mw
@@ -12,6 +12,10 @@ Med virtuele warkelikheid up [[Avatar (afbealding)|avatarbasis]] köänet lüde 
 
 By VR vöär komputers wördt ne virtuele 3D-wearld up een bealdskarm töynd sunder beweagingsvolgende techniken. Vöäle ''first-person'' [[videospel]]len sint dår vöärbealden van. Verskillende inbouwde geböärtenissen, reagerende karakters en andere interaktive künstgreapen wördt den spöäler et gevööl geaven dat se der heylemål in sit. Een grout pünt van kritik is dat der gin sicht upsyd is, wat den spöälers gewårheid van de ümgeaving beparket.
 
+[[File:Engineers train in virtual environment to prepare for real missions 150616-Z-YF431-084.jpg|thumb|Nen [[Verienigde Staoten|amerikaansken]] soldåt düt ovenen med ne VR-brille.]]
+
+Med een HMD-höyvdstel (''head-mounted display'') is de beleavingswearld vöär gebrukers starker, ümdat et et heyle blikveld ümslut. In et höyvdstel sittet meysttyds twey kleine sköärmkes med skarp beald vöär yder ouge. Disse låt de virtuele wearld uut net yts nen anderen hook seen, wårdöär den gebruker se in et höyvd samenvoogt en de illusy van 3D ontsteyt. Döär de gelüüdseffekte te koppelen an dat wat der in et blikveld geböärt, wördt de rüümtelike beleaving verstarked. Ouk med haptiske technology kan een gebruker de virtuele wearld lichamelik beinvlouden. Döär der ne treadmöäle an te koppelen kan gebruker sik vöär et gevööl når alle kanten beweagen.
+
 
 [[kategorie: Tweants artikel]]
 [[Kategorie: Techniek]]
