*Empty MediaWiki Message*

--- a/Skeetspel.mw
+++ b/Skeetspel.mw
@@ -8,6 +8,17 @@ Et allereyrste skeetspel was Maze War (''dwelhov-oorlog''), wat in 1973 uutköä
 
 Med ''[[Half-Life (videospel)|Half-Life]]'' uut 1998 en synen upvolger ''[[Half-Life 2]]'' uut 2004 wörden et verhaal en rådseluplössen steyds belangryker. In 1999 wör dat spel kopieerd en veranderd in ''[[Counter-Strike (videospel)|Counter-Strike]]''. Samen med ''Doom'' is et meskeen wal eyne van de meyst invloodryke skeetspellen. ''[[GoldenEye 007 (videospel)|GoldenEye 007]]'', wat uutköäm in 1997, was een kantelpünt in de verkoup van videospelkonsoles, wår as de spelryge ''[[Halo (ryge)|Halo]]'' sorgden vöär ne gröätere antrekkingskracht van konsoles. In den [[21e eeuw|21. eyw]] leyvert ''first-person shooters'' et meyste geld up. In 2016 warren 27% van alle verkochte videospellen skeetspellen.<ref>|https://www.statista.com/statistics/189592/breakdown-of-us-video-game-sales-2009-by-genre/ statista.com. "Genre breakdown of video game sales in the United States in 2016". Bekeaken up 5 mei 2017.</ref> Verskillende eyrstelyns-skeetspellen wordt ouk vöäle in [[esport]] en wedstrydverband espöäld.
 
+==Spelupbouw==
+Net as de meyste skeetspellen drait et by skütterspellen üm nen [[avatar]], eyne of meyrdere wåpens en een verskeiden antal vyanden. Ümdat se in een 3D-umgeaving spöäld wordet, sint dit soort spellen wat wårheidstrouwer wat [[swårtekracht]], belöchting, gelüüd en botsingen angeyt, as [[2D-skeetspellen]].
+
+Up komputers wordt skütterspellen vake bestüürd med ne wesselwarking van tutsenbordknöppe en [[muus (komputergerei)|muusbeweagingen]]. Vöäle lüde vindet dat feiner warken as med een spelkonsole,<ref>[https://web.archive.org/web/20090221090806/http://news.teamxbox.com/xbox/6918/Play-Halo-on-Xbox-with-a-Keyboard-Mouse/ (Archiveerd) Beradini, Cesar A. "Play Halo on Xbox with a Keyboard & Mouse."], ''Team Xbox,'' 4 oktober 2004. Bekeaken up 23 february 2009.</ref><ref>[https://web.archive.org/web/20161229055559/http://www.nytimes.com/2009/03/03/arts/television/03kill.html?_r=1&scp=2&sq= (Archiveerd) Schiesel, Seth. "Balletic Finesse Amid the Science-Fiction Carnage." ''The New York Times''. Skreaven up 2 maert 2009.] Bekeaken up  7 maert 2009.</ref> wårup et spel bestüürd müt worden med twey analoge pöykskes: eyne vöär loupen en upsyd treaden, den ander vöär rundkyken en richten.<ref>[https://web.archive.org/web/20080617060822/http://www.xbox.com/en-US/games/tips/noviceguides/firstpersonshooters.htm (Archiveerd) Treit, Ryan. "Novice Guides: First Person Shooter"], ''Xbox.com.'' Bekeaken up 23 februåry 2009.</ref> Meysttyds sint de handen en wåpen van et höyvdkarakter middenvöär in beald te seen. an de rände van et beald sint ståtusbalkens of skarme te seen med informaty oaver de gesundheid, koagelvöärråd en lokatygegeavens van et karakter. Vake kan den spöäler ouk ne vulleydige weadergave van de umgeavingskaarte uproupen.<ref>Lahti, Martti, "As We Become Machines: Corporealized Pleasures in Video Games", Wolf, Mark J. P. & Perron, Bernard (eds.), ''The Video Game Theory Reader'', Routledge, p. 161</ref>
+
+===Gevechten en verstarkingen===
+By skütterspellen geyt et meysttyds üm rappe akty, med gau-verloupende en bloderige skeetgevechten. Een paar spellen legt meyr nådrük up et verhaal, probleemoplössing en logika. Nöäst sketen kümt handvechten ouk vöär. By een paar spellen sint handwåpens krachtiger as afstandswåpens ümdat den spöäler een gröäter gevår müt loupen döär sik körterby den teagenstander te beweagen.<ref>[https://web.archive.org/web/20081221000512/http://www.gamasutra.com/view/feature/3868/shoot_to_thrill_biosensory_.php?page=3 (Archiveerd) Hong, Tim. Gamasutra.com. "Shoot to Thrill: Bio-Sensory Reactions to 3D Shooting Games".] Skreaven up 2 december 2008. Bekeaken up 23 februåry 2009</ref> By wat ümstanden is een handwåpen minder effektiv mär nöydig as lätsten uutvlucht.<ref>[https://web.archive.org/web/20100809065209/http://uk.guides.ign.com/guides/884680/page_8.html (archiveerd) ''IGN'', Bekeaken up 10 maert 2009.</ref> By taktiske skeetspellen drait et meyr üm samenwarking en strategy üm een dool te halen. Den spöäler voort hyrby een grup karakters an, dee döär den komputer bestüürd wordet of döär lüde dee medspöält.
+
+By skütterspellen kan nen spöäler meysttyds uut een antal wåpens kesen. Dee sorget allemål dat et spel up ne andere wyse spöäld worden müt. Wat speluntwarpen hebbet realistiske modellen van bestånde of historiske wåpens. Dårby wordet ouk öäre vüerkracht, koagelvöärråd, terügslag en doolrichtheid mednöämen. By andere spellen gevt et selvversünnen wåpens, of in een butenaerdsk scenario ouk butenaerdske wåpens. Dårnöäst kan der een breyd anbud van vöärwarpen as wåpen bruked worden, so as wark- en bouwgerei, lasers, plasma, raket- en granaatwarpers of krüüsboagen. Ouk köänet der mangs steynder, granaten en spears esmeaten worden. In skütterspellen binnen et [[fantasy]]genre koamet der mangs boavennatüürlike krachten by kyken wår as de handen vlammen, elektriske stouten, telekinesis of andere boavennatüürlike gaven köänet insetten. In vöäle spellen låtet de untwarpers to dat nen spöäler meyrdere wåpens tegelyke meddregt sunder dat dat snelheid of beweagingsvryheid hindert. Üm et wat wårheidstrouwer te maken, keset se der mangs vöär üm mär eyn kleiner wåpen en eyn grout geweyr to te låten. Vake köänet der wåpens tuusked (rüüld) worden of oaver enöämen van nen douden vyand. Nen höyvdkarakter kan sikselv mangs 'gesund' maken döär een eyrstehülpdöyske up te krygen. Dee ligt verspreid döär de spelwearld.<ref>[https://web.archive.org/web/20090216002953/http://uk.ps3.ign.com/articles/953/953636p1.html Staff, (Archiveerd) The Wednesday 10: First-Person Shooter Cliches] ''IGN,'' Skreaven up 11 februåry 2009, Bekeaken up 23 februåry 2009.</ref> In wat spellen kan nen spöäler ervaringspünten upbouwen, wårmed as nye wåpens en vaerdigheden untgrendeld wordet.<ref>[https://web.archive.org/web/20080525134030/http://www.gameinformer.com/News/Story/200803/N08.0305.1634.21173.htm?Page=2 (Archiveerd. Game Informer. "The Art Of FPS Multiplayer Design". Skreaven up 3 mei 2008.] bekeaken up 24 februåry 2009.</ref>
+
+
 ==Literatuurverwysingen==
 <references/>
 
