--- a/Videospel.mw
+++ b/Videospel.mw
@@ -2,7 +2,7 @@
 
 Een '''videospel''' (vake andüüdt med et [[engels]]ke woord '''game''' üm et te underskeiden van nit-digitale spellekes) is een elektronisk spel wårby nen spöäler uutwesseling angeyt med ne digitale umgeaving üm sichtbåre geböärtenissen te töynen up een twey- of dreydimensionaal weadergavemedium, so as een [[filmskarm]], [[virtuele warkelikheid|VR]]-höyvdstel of [[komputerskarm]]. Vanaf de jåren '80 sint videospellen een voordan belangryker deyl van de vermaakindustry ewörden. Of videospellen ouk ne ård van [[künst]] sint wördt noch vöäle bedisterd.
 
-De elektroniske systemen üm videospellen up te spöälen sint [[komputerplatform]]s. Videospellekes wordet vake maked vöär eyn of meyrere platforms. Mangs sint se ouk weader nit vöär alle platforms te krygen. In de jåren '80 warren de so nöömde ''arcade games'' populair. Dat sint spöälkasten wårin as et spöl te spöälen is döär der geld in te drükken. Dårvan löäp et gebruuk terügge do as der platforms vöär in de huuskamers köämen, so as [[videospelkonsole]]s, [[laptop|(vold)komputers]] en later ouk [[smartphone|kloukfoon]]s.
+De elektroniske systemen üm videospellen up te spöälen sint [[komputerplatform]]s. Videospellekes wordet vake maked vöär eyn of meyrere platforms. Mangs sint se ouk weader nit vöär alle platforms te krygen. In de jåren '80 warren de so nöömde ''arcade games'' populair. Dat sint spöälkasten wårin as et spel te spöälen is döär der geld in te drükken. Dårvan löäp et gebruuk terügge do as der platforms vöär in de huuskamers köämen, so as [[videospelkonsole]]s, [[laptop|(vold)komputers]] en later ouk [[smartphone|kloukfoon]]s.
 
 Üm de loup van et spel te bestüren gevt et verskillende bedeningsapparaten, so as [[gamepad]]s, [[joystick]]s, [[muus (komputergerei)|müse]], [[toetsenbord|tastatüren]], [[anraakskarm|vöölskärme]] up mobile apparaten, of mangs selvs een menskelik lyf med ne [[kinect]]-völerd. Spöälers bekyket et spöl up een weadergeavapparaat so as ne [[televisie|televisy]] of [[komputerskarm]]. Mangs koamet der ouk [[virtuele warkelikheid|VR-brillen]] an te passe. Meysttyds wördt de spelbeleaving understüt med gelüüdseffekten, musik en inspröäkene tekste, dee med lüüdspreakers of koptelefoons te höyren sint. Vanaf et jår [[2000]] köämen dår ouk [[haptiske technology]] en trileffekte by.
 
