*Empty MediaWiki Message*

--- a/Skeetspel.mw
+++ b/Skeetspel.mw
@@ -1,4 +1,4 @@
-[[File:Doom ingame 2.png|thumb|250px|right|Skarmupname van ''Doom'', eyne van de bekendste skeetspellen, med et kenmarkende sküttersblikveld.]]
+[[File:S.T.A.L.K.E.R.- Call of Pripyat.jpg|thumb|250px|right|Skarmupname van ''Call of Pripyat'', med et kenmarkende sküttersblikveld.]]
 
 Een '''skeetspel''' is een [[videospel]] wårby et de bedoling is üm den teagenstander med virtuele wåpens (of andere vöärwarpen) uut te skakelen. Dat kan vanuut een eyrstepersoons sichtspünt (''first-person shooter''), mär ouk vanuut een dardepersoons (''third-person shooter''). By den eyrsten süt den spöäler de spelwearld vanuut de ougen van et höyvdkarakter, by den tweyden kikt den spöäler et karakter meysttyds up de rügge.
 
