*Empty MediaWiki Message*

--- a/Chillhop.mw
+++ b/Chillhop.mw
@@ -1,4 +1,4 @@
-'''Chillhop''' (''untspannen hiphop''), ouk wal '''Lofi hiphop'' nöömd) is ne musiksoorte dee is afleided van [[hiphop]]. Et wördt kenmarked döär sik herhalende lange, warme [[jazz]]-[[akkoord]]en (meyst up ne elektriske [[piano]] of [[gitaar]]) en een swår [[drums|drumritme]]. Et tempo van chillhop ligt rund de 80 [[BPM]]. Vöäle nummers hebbet ginne düdelik afbakende melodylyne. Döär mekander wördt der nit in [[zangkeunst|esüngen]] of [[rappen|räpped]], med uutsundering van nen enkelen flard up den achtergrund. Ouk sit der vake achtergrundgelüüd in van olde grammofoonplaten, reygen of kafeegelüden.
+'''Chillhop''' (''untspannen hiphop''), ouk wal '''Lofi hiphop''' nöömd) is ne musiksoorte dee is afleided van [[hiphop]]. Et wördt kenmarked döär sik herhalende lange, warme [[jazz]]-[[akkoord]]en (meyst up ne elektriske [[piano]] of [[gitaar]]) en een swår [[drums|drumritme]]. Et tempo van chillhop ligt rund de 80 [[BPM]]. Vöäle nummers hebbet ginne düdelik afbakende melodylyne. Döär mekander wördt der nit in [[zangkeunst|esüngen]] of [[rappen|räpped]], med uutsundering van nen enkelen flard up den achtergrund. Ouk sit der vake achtergrundgelüüd in van olde grammofoonplaten, reygen of kafeegelüden.
 
 Et drumritme, de ''beat'', is vake 'uutkleydet' töt enkel ne [[bassdrum|groute trumme]], [[snaredrum|kleine trumme]] en [[hihat]] dee in veerkwartsmåte spöälet. De hihats wordet nit up strakke intervallen spöäld en ouk de kleine trumme (of [[rimklik]]) kümt vake net nen tik te vroo of te late. Dit gevt et een wat 'slordig' of 'achtelous' gevööl.
 
