--- a/Steyngrove_van_Wenters.mw
+++ b/Steyngrove_van_Wenters.mw
@@ -3,4 +3,4 @@
 De '''Steyngruve van Wenters''' is nen dagbowgruve by [[Ratum]], [[Wenters]] wår kalksteyn uut de Muschelkalkformatsy (240-236 miljoon jår eleden) wördet ewönnen. De gruve is aktiv sinds 1932 en is teggenswoordig eigendomme van Sibelco (wördet gebruked döär öäre underneyminge ''NV Winterswijkse Steen- en Kalkgroeve''). De Muschelkalkformatsy uut et Trias kömmet hyr (so good as) an de uppervlakte, de ewönnene steyne wördet verwarked as kalksteyne en dårnevven kömmet verskeydene minerålen vöär, so as markasyt, galenyt, kalcyt en pyryt. Ok bünt der wat fossylen en pootavdrükke en botresten (van den ''Nothosaurus'') van sauriers evunden. De oustelike gruve is neet meyr in gebruuk en is now nen natuurgebyd.
 
 {{Dialekt|act|Wenters|NSS}}
-[[Kategory:Geology]] [[Kategory:Geology van Neaderland]]
+[[Kategorie:Geology]] [[Kategorie:Geology van Neaderland]]
