--- a/Loo_(Duve).mw
+++ b/Loo_(Duve).mw
@@ -1,6 +1,6 @@
-'''Loo''' is een darp in de [[Gelderlaand|gelderske]] gemeynde [[Duve (gemeente)|Düven]] in de [[Liemers|Lymers]]. Et hevt 1120 inwuners (volgens CBS in 2018).
+'''Loo''' is nen darp in de [[Gelderlaand|gelderske]] gemeynte [[Duve (gemeente)|Düven]] in de [[Liemers|Lymers]]. Et hevt 1120 inwoaners (völgens CBS in 2018).
 
-De oorsprungelike name van et darp was '''Angeroyen''', enöömd nå de [[waerd]]en dee tot Angeren behöyrden, an de [[Betuwe|betuwske]] kante van de [[Rien|Ryn]]. Nå een ströymverleaging in de middeleywen kwammen disse waerden an de lymerske syde te liggen. So kwam et darp Angeroyen in de Lymers te liggen. Et bestünd üüt een untginningsgebeed tüsken [[Westervoort]] en [[Groessen]], ümgeaven döär een olde rynstrank: de Leigrave. De band mid et darp Angeren blikt üüt de name, een ''ooy'' is een ander woord vöär 'waerd'.
+De oorsprunkelike name van et darp was '''Angeroyen''', enöömd når de [[waerd]]en dee töt Angeren behöyrden, an de [[Betuwe|betuwske]] kante van de [[Rien|Ryn]]. Nå nen ströymverlegginge in de middeleywen kwamen disse waerden an de lymerske syde too liggen. So kwam et darp Angeroyen in de Lymers too liggen. Et bestünd üüt nen untginningsgebeed tüsken [[Westervoort]] en [[Groessen]], ümgeaven döär nen olden rynstrang: de Leigrave. De band med et darp Angeren blikt üüt de name, nen ''ooy'' is nen ander woord vöär 'waerd'.
 
 {{Dialekt|act||NSS}}
 
