*Empty MediaWiki Message*

--- a/Chillhop.mw
+++ b/Chillhop.mw
@@ -1,8 +1,8 @@
-'''Chillhop''' (''untspannen hiphop''), ouk wal '''Lofi hiphop''' nöömd) is ne musiksoorte dee is afleided van [[hiphop]]. Et wördt kenmarked döär sik herhalende lange, warme [[jazz]]-[[akkoord]]en (meyst up ne elektriske [[piano]] of [[gitaar]]) en een swår [[drums|drumritme]]. Et tempo van chillhop ligt rund de 80 [[BPM]]. Vöäle nummers hebbet ginne düdelik afbakende melodylyne. Döär mekander wördt der nit in [[zangkeunst|esüngen]] of [[rappen|räpped]], med uutsundering van nen enkelen flard up den achtergrund. Ouk sit der vake achtergrundgelüüd in van olde grammofoonplaten, reygen of kafeegelüden.
+'''Chillhop''' (''untspannen hiphop'', ouk wal '''Lofi hiphop''' nöömd) is ne musiksoorte dee is afleided van [[hiphop]]. Et wördt kenmarked döär sik herhalende lange, warme [[jazz]]-[[akkoord]]en (meyst up ne elektriske [[piano]] of [[gitaar]]) en een swår [[drums|drumritme]]. Et tempo van chillhop ligt rund de 80 [[BPM]]. Vöäle nummers hebbet ginne düdelik afbakende melodylyne. Döär mekander wördt der nit in [[zangkeunst|esüngen]] of [[rappen|räpped]], med uutsundering van nen enkelen flard up den achtergrund. Ouk sit der vake achtergrundgelüüd in van olde grammofoonplaten, reygen of kafeegelüden.
 
 Et drumritme, de ''beat'', is vake 'uutkleydet' töt enkel ne [[bassdrum|groute trumme]], [[snare drum|kleine trumme]] en [[hihat]] dee in veerkwartsmåte spöälet. De hihats wordet nit up strakke intervallen spöäld en ouk de kleine trumme (of [[rimklik]]) kümt vake net nen tik te vroo of te late. Dit gevt et een wat 'slordig' of 'achtelous' gevööl.
 
-Döärdat chillhop een når verholding kort akkoordenverloup hevt wat sik steyds herhaalt en der niks düdeliks uutspringt, düt et fråi dröymerig an. 
+Döärdat chillhop een når verholding kort akkoordenverloup hevt (neet meyr as veer måten) wat sik steyds herhaalt en der niks düdeliks uutspringt, düt et fråi dröymerig en mangs[[melancholie|melancholisk]] an. 
 
 Nöäst untspanning lüstert vöäle lüde der ouk når üm up te warken of studeren. Rechtstreyks ströymende chillhop-kanalen up YouTube trekket vöäle tohöyrders, med name under jungeren.<ref>[https://www.standaard.be/cnt/dmf20181016_03850378 Standaard.be. "Dit is de ambient van de millenials." Uutgeaven up 17 oktober 2018.] Bekeaken up 3 november 2019.</ref>
 
