Wysigingen döär [[Special:Contributions/151.45.28.237|151.45.28.237]] ([[User talk:151.45.28.237|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Legobot|Legobot]]

--- a/Italiaons.mw
+++ b/Italiaons.mw
@@ -1,12 +1,6 @@
-De taol '''Italiaons''' is een lid van de [[Romaans|Romaonse taolgroep]]. 't Italiaons wordt praot deur ongeveer 57 miljoen mèensen in [[Italië]], in verschillende [[dialekt|varianten]]. Partie van dizze variaanten verschillen zo staark van 't algemeeine Italiaons, dat ze op zukzölf staonde taolen bint. 't Antal sprekers van 't algemeeine Italiaons in Italië is ongeveer 30 miljoen. Wereldwied bint der ongeveer 63 miljoen Italiaonssprekenden.<ref>Simone, 2010</ref>
+De taol '''Italiaons''' is een lid van de [[Romaans|Romaonse taolgroep]]. 't Italiaons wordt praot deur ongeveer 57 miljoen mèensen in [[Italië]], in verschillende [[dialekt|varianten]]. Partie van dizze variaanten verschillen zo staark van 't algemeeine Italiaons, dat ze op zukzölf staonde taolen bint. 't Antal sprekers van 't algemeeine Italiaons in Italië is ongeveer 30 miljoen. Wereldwied bint der ongeveer 63 miljoen Italiaonssprekenden.
 
 De oldste schreven teksten stammen oet de [[10e eeuw|10e ieuw]], mor der is veul meer materiaol terug te vinden oet de [[14e eeuw|14e ieuw]]. Oet dizze tied stammen de waarken van de beroemde klassieke Florentiense dichter [[Dante Alighieri]], mor ok van [[Francesco Petrarca]] en [[Giovanni Boccaccio]].
-
-== Reffereansies ==
-<references/>
-* Berloco, Fabrizio (2018). ''[https://books.google.de/books?id=DYynDwAAQBAJ&pg=PA3#v=onepage&q&f=false The Big Book of Italian Verbs: 900 Fully Conjugated Verbs in All Tenses. With IPA Transcription, 2nd Edition]''. Lengu.
-* Palermo, Massimo (2015). ''Linguistica italiana''. Il Mulino.
-* Simone, Raffaele (2010). ''Enciclopedia dell'italiano''. Treccani.
 
 {{Interwiki|kode=it}}
 
