--- a/Groft-De_Riep.mw
+++ b/Groft-De_Riep.mw
@@ -1,7 +1,7 @@
 {{Veurmaolige gemeente |
 naam = Groft-De Riep |
 bestaandsnaam vlagge = Graft-De-Rijp vlag.png |
-bestaandsnaam wapen = Graft-De-Rijp wapen.png |
+bestaandsnaam wapen =|
 lokasie = LocatieGraft-DeRijp |
 provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaotse = [[De Riep]] |
