*Empty MediaWiki Message*

--- a/Marlene_Bakker.mw
+++ b/Marlene_Bakker.mw
@@ -2,7 +2,7 @@
 
 Do as Bakker 17 was, verhüüsden see når [[Tilborg]] üm dår an de rockakademy te studeren vöär sangeresse en musikunderneamster. Weaderümme in Grönningen begün see al rap med olde grönningske nummers vannys uutvoren, under meyr van grönninger volkssanger [[Ede Staal]] in öär teaterprogramma ''Ode an Ede''.<ref>[https://www.dvhn.nl/groningen/Marlene-Bakker-neemt-debuut-cd-op-in-Utrecht-21543451.html dvhn.nl. "Marlene Bakker neemt debuut-cd op in Utrecht". Kelckhoven, Louis van. skreaven up 5 augustus 2016.] Bekeaken up 5 november 2019.</ref> 
 
-In [[2018]] köäm öär debuutalbum RAIF uut, wårvöär as see samenwarkeden med under meyr Bernard Gepken
+In [[2018]] köäm öär debuutalbum RAIF uut, wårvöär as see samenwarkeden med under meyr Bernard Gepken (bekend as gitarist van under meyr [[Daniel Lohues]]).
 
 ==Platenryge==
 ===Albums===
