*Empty MediaWiki Message*

--- a/Marlene_Bakker.mw
+++ b/Marlene_Bakker.mw
@@ -7,7 +7,7 @@ In [[2018]] köäm öär debuutalbum RAIF uut, wårvöär as see samenwarkeden m
 
 Bakker maket höyvdsakelik popachtige nummers, wårby as de nådrük ligt up de beleyving van et grönningsk.
 
-In [[2017]] wün see de [[Bosklopper Gala|Bosklopper Bokaal]] en de [[Dagblad van het Noorden Streektaalpries]] [[2018]]<ref>[https://www.dvhn.nl/groningen/Dagblad-van-het-Noorden-streektaalprijzen-voor-Marlene-Bakker-en-Anne-Doornbos-24364575.html dvhn.nl. "Streektaalprijzen voor Marlene Bakker en Anne Doornbos". Kelckhoven, Louis van. 14 april 2018. 5 november 2019]</ref>. Ouk köäm se in dat jår in et nys ümdat see akty voorden vöär meyr neadersassiske musik up de nationale radio.<ref>[https://www.dvhn.nl/groningen/Radiobaas-NPO-ondersteunt-actie-Nedersaksischopderadio-van-Marlene-Bakker-en-hij-is-niet-de-enige-23674097.html dvhn.nl. "Radiobaas NPO ondersteunt actie Nedersaksischopderadio van Marlene Bakker". Fens, Thijs. 16 oktober 2018.] 11 november 2019.</ref>
+In [[2017]] wün see de [[Bosklopper Gala|Bosklopper Bokaal]] en de [[Dagblad van het Noorden Streektaalpries]] [[2018]]<ref>[https://www.dvhn.nl/groningen/Dagblad-van-het-Noorden-streektaalprijzen-voor-Marlene-Bakker-en-Anne-Doornbos-24364575.html dvhn.nl. "Streektaalprijzen voor Marlene Bakker en Anne Doornbos". Kelckhoven, Louis van. 14 april 2018. 5 november 2019]</ref>. Ouk köäm se in dat jår in et nys ümdat see akty voorden vöär meyr [[nedersaksisch|neadersassiske]] musik up de nationale radio.<ref>[https://www.dvhn.nl/groningen/Radiobaas-NPO-ondersteunt-actie-Nedersaksischopderadio-van-Marlene-Bakker-en-hij-is-niet-de-enige-23674097.html dvhn.nl. "Radiobaas NPO ondersteunt actie Nedersaksischopderadio van Marlene Bakker". Fens, Thijs. 16 oktober 2018.] 11 november 2019.</ref>
 
 ==Platenryge==
 ===Albums===
