--- a/Germaanse_lotsbeduding.mw
+++ b/Germaanse_lotsbeduding.mw
@@ -5,11 +5,17 @@ De germanen vöölden sich ait edreaven döär yts wat de wearld düt leaven en 
 
 Een stükkyn üüt de [[Heliand]] gevt et germaanske lotsbenül in eyne sinne mooi an:
 
-* ''So habed im wurdgiscapu metod gimarcod''
+:: ''So habed im wurdgiscapu,''
+:: ''metod gimarcod''
+:: ''endi maht godes.''
 
 Wat so yts beteakend as: 
 
-''So hevt et lot et üüt emeaten en emarkeyred.''
+:: ''So hevt et lot esköäpen,'' 
+:: ''de måte et emarkeyred''
+:: ''en de macht van God.''
+
+Ümdat et een christelik gedichte is, wördden ''maht godes'' der noch by an eplakked.
 
 ==Namen==
 Et lot wördden med verskillende namen an edüded. By de [[Vikings|noorske]] stammen wördden et ''Örlög'' enömed (wat in et oldsassisk ''Urlagi'' is), wat een oldere varsyn is van uns woord ''oorlog''. ''Oor'' is et sülvden as et (neaderlandsken) vöärvoogsel ''oer-'', en ''log'' kümt van ''leggen'' of een ander woord vöär ''eyd''.
