/* Et profil van den koureur */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -223,12 +223,12 @@ Hamilton wördet esen as eynen van de beste reagenryders in den sport en summige
 
 Eyrder in syne karriere wyr Hamilton bekritisered vöär sums wuudend too wean, so as doo hy ediskwalificered wyr in Imola in den GP2 vöär et inhålen van den safety car, wat hy veer jår låter sül herhålen in de Formule Eyn in den europäesken Grouten Prys van 2010 in Valencia. Skonwal hevt Hamilton låter in syne karriere meyr vulwassenheyd etöyned, terwyl hy syne genadelousheyd en agressy beholdeden. Hy verdealeden de meningen van et publyk en vöärmålige koureurs in de låtste race van et seisoon van 2016, wår hy an de leiding teagen de teamorders inging döär Nico Rosberg too vertrågen en too dwingen in de achtervölgende gruup üm by öäre rivålen uut too lokken dat sy synen teammåten in gingen hålen, wat hem in ståt had estelled üm et werldkampioonskap too winnen.
 
-=== Reception ===
-Hamilton is often considered the best driver of his generation,<ref name="auto8">{{cite news|url=http://time.com/lewis-hamilton-formula-one/|title=The fastest man on wheels|last=Gregory|first=Sean|date=20 December 2016|work=Time Magazine|accessdate=9 August 2017}}</ref><ref name="auto9">{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/11954394/Lewis-Hamilton-has-proved-himself-to-be-the-best-F1-driver-of-his-generation.html|title=Lewis Hamilton has proved himself to be the best F1 driver of his generation|last=Coulthard|first=David|date=26 October 2015|work=The Telegraph|accessdate=9 August 2017}}</ref><ref>{{cite news|url=http://www.gpupdate.net/en/f1-news/207863/hamilton-megastar-of-generation-brundle/|title='Hamilton megastar of generation' – Brundle|date=6 March 2009|work=gpupdate.net|accessdate=9 August 2017}}</ref> and widely regarded as one of the greatest Formula One drivers in the history of the sport.<ref>{{cite news|url=https://www.bbc.co.uk/sport/formula1/18096591|title=Formula One's Greatest Drivers|last=Benson|first=Andrew|date=22 May 2012|work=BBC Sport|accessdate=11 December 2016}}</ref><ref>{{cite web|url=http://f1greatestdrivers.autosport.com/?driver=17|title=Formula 1's Greatest Drivers – Lewis Hamilton|work=Autosport|accessdate=9 April 2017}}</ref><ref>{{cite web|url=http://www.f1-grandprix.com/?page_id=3256|title=Top 15 All Time Drivers|work=F1-Grand Prix|accessdate=11 December 2016}}</ref> Often considered among the greatest British drivers in Formula One, Hamilton is the most successful, having [//en.wikipedia.org/wiki/List_of_Formula_One_Grand_Prix_winners more race victories than any other British driver] in the history of Formula One and matching [//en.wikipedia.org/wiki/Jim_Clark Jim Clark] and [//en.wikipedia.org/wiki/Alain_Prost Alain Prost]'s five [//en.wikipedia.org/wiki/British_Grand_Prix British Grand Prix] victories.<ref>{{cite web|url=https://www.theguardian.com/sport/2017/jul/16/lewis-hamilton-wins-british-grand-prix-mercedes-sebastian-vettel|title=Lewis Hamilton delivers F1 driving masterclass to win British Grand Prix|work=The Guardian|accessdate=9 April 2017}}</ref><ref>{{cite web|url=https://www.theguardian.com/sport/2017/jul/16/lewis-hamilton-british-grand-prix|title=Lewis Hamilton proud to rank among F1 greats after British Grand Prix win|work=The Guardian|accessdate=9 April 2017}}</ref> His jet-set lifestyle and interests outside Formula One have been criticised, however, figures in the sport such as [//en.wikipedia.org/wiki/Emerson_Fittipaldi Emerson Fittipaldi] and [//en.wikipedia.org/wiki/Christian_Horner Christian Horner] have voiced their support for Hamilton's ability to connect with fans. Bernie Ecclestone has frequently commented on his admiration of Hamilton's ability to promote the sport through his lifestyle, noting how he is happy to engage with fans, unlike some of his peers.<ref>{{cite web|url=https://www.theguardian.com/sport/2016/oct/30/lewis-hamilton-formula-one-emerson-fittipaldi|title=Lewis Hamilton is a great example for the other F1 drivers, says Emerson Fittipaldi|work=The Guardian|accessdate=9 April 2017}}</ref> Since Hamilton's rookie season in 2007, Formula One's annual global revenue has risen by 53%, to $1.83&nbsp;billion as of 31 July 2016.<ref name="auto8" />
+=== Untvangst ===
+Hamilton is often considered the best driver of his generation, and widely regarded as one of the greatest Formula One drivers in the history of the sport. Often considered among the greatest British drivers in Formula One, Hamilton is the most successful, having [//en.wikipedia.org/wiki/List_of_Formula_One_Grand_Prix_winners more race victories than any other British driver] in the history of Formula One and matching [//en.wikipedia.org/wiki/Jim_Clark Jim Clark] and [//en.wikipedia.org/wiki/Alain_Prost Alain Prost]'s five [//en.wikipedia.org/wiki/British_Grand_Prix British Grand Prix] victories. His jet-set lifestyle and interests outside Formula One have been criticised, however, figures in the sport such as [//en.wikipedia.org/wiki/Emerson_Fittipaldi Emerson Fittipaldi] and [//en.wikipedia.org/wiki/Christian_Horner Christian Horner] have voiced their support for Hamilton's ability to connect with fans. Bernie Ecclestone has frequently commented on his admiration of Hamilton's ability to promote the sport through his lifestyle, noting how he is happy to engage with fans, unlike some of his peers. Since Hamilton's rookie season in 2007, Formula One's annual global revenue has risen by 53%, to $1.83&nbsp;billion as of 31 July 2016.
 
-A prodigious talent as a teenager, Hamilton established himself as one of the world's best drivers following his record-breaking rookie year where he matched his teammate, two-time world champion [//en.wikipedia.org/wiki/Fernando_Alonso Fernando Alonso] and finished runner-up in the championship by a solitary point. After his first world title in 2008, many people considered Hamilton the best driver of his generation.<ref>{{cite news|url=https://www.theguardian.com/sport/2007/jun/03/features.sportmonthly|title=The real deal|last=Owen|first=Owen|date=3 June 2007|work=The Guardian|accessdate=9 August 2017}}</ref> Following [//en.wikipedia.org/wiki/Red_Bull_Racing Red Bull] and [//en.wikipedia.org/wiki/Sebastian_Vettel Sebastian Vettel]'s four-year dominance of the sport over the next four years, Hamilton's resolve was tested both professionally and personally as he did not yield a finish higher than fourth in the Drivers' Championship, leading some to question his status as the best driver in the sport.<ref name="auto10">{{cite news|url=http://bleacherreport.com/articles/2294844-where-does-lewis-hamilton-rank-on-list-of-f1s-greatest-drivers|title=Where Does Lewis Hamilton Rank on List of F1's Greatest Drivers?|last=Walthert|first=Matthew|date=10 December 2014|work=Bleacher Report|accessdate=9 August 2017}}</ref>
+A prodigious talent as a teenager, Hamilton established himself as one of the world's best drivers following his record-breaking rookie year where he matched his teammate, two-time world champion [//en.wikipedia.org/wiki/Fernando_Alonso Fernando Alonso] and finished runner-up in the championship by a solitary point. After his first world title in 2008, many people considered Hamilton the best driver of his generation. Following [//en.wikipedia.org/wiki/Red_Bull_Racing Red Bull] and [//en.wikipedia.org/wiki/Sebastian_Vettel Sebastian Vettel]'s four-year dominance of the sport over the next four years, Hamilton's resolve was tested both professionally and personally as he did not yield a finish higher than fourth in the Drivers' Championship, leading some to question his status as the best driver in the sport.
 
-Three years later, after clinching his second and third World Championship titles with Mercedes in dominant fashion over long-time friend and teammate [//en.wikipedia.org/wiki/Nico_Rosberg Nico Rosberg], [//en.wikipedia.org/wiki/David_Coulthard David Coulthard] declared Hamilton the best driver of his generation, calling him "the Ayrton Senna of his era".<ref name="auto9" /> This opinion gradually gained greater acceptance amongst the public, experts and fellow and former drivers.<ref name="auto8" /> His less successful years with McLaren have also been cited as a demonstration of driving ability as Hamilton has won [//en.wikipedia.org/wiki/List_of_Formula_One_driver_records%23Most_consecutive_seasons_with_a_Grand_Prix_win at least one race in twelve consecutive seasons], attracting high praise from seasoned racers for extracting race-winning performances from cars that were not dominant. As Hamilton's success continued, achieving the most all-time pole positions and the second most race victories, as well as his fourth World Championship title, public and expert debate moved from his status in modern Formula One to his status amongst the greatest drivers in history.<ref name="auto10" /><ref name="bbcalonsoq" />
+Three years later, after clinching his second and third World Championship titles with Mercedes in dominant fashion over long-time friend and teammate [//en.wikipedia.org/wiki/Nico_Rosberg Nico Rosberg], [//en.wikipedia.org/wiki/David_Coulthard David Coulthard] declared Hamilton the best driver of his generation, calling him "the Ayrton Senna of his era". This opinion gradually gained greater acceptance amongst the public, experts and fellow and former drivers. His less successful years with McLaren have also been cited as a demonstration of driving ability as Hamilton has won [//en.wikipedia.org/wiki/List_of_Formula_One_driver_records%23Most_consecutive_seasons_with_a_Grand_Prix_win at least one race in twelve consecutive seasons], attracting high praise from seasoned racers for extracting race-winning performances from cars that were not dominant. As Hamilton's success continued, achieving the most all-time pole positions and the second most race victories, as well as his fourth World Championship title, public and expert debate moved from his status in modern Formula One to his status amongst the greatest drivers in history.
 
 === Rivalry with Nico Rosberg ===
 [[File:Nico_Rosberg_and_Lewis_Hamilton_2016_Malaysia.jpg|rechts|duum|Lewis Hamilton (left) and Nico Rosberg (right) at the [//en.wikipedia.org/wiki/2016_Malaysian_Grand_Prix 2016 Malaysian Grand Prix].]]
