--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -37,14 +37,14 @@ Der binnen vaaier [[Stad (woonstee)|steden]] in de provìnzie: [[Grunnen (stad)|
 Grunnen is noa [[Drenthe]], [[Frieslaand|Fraislaand]] en [[Zeelaand]]  provìnzie mit minst aantal ienwoners van Nederlaand, met 246 inwoner per km².
 
 == Geogroafie ==
-t Noordoosten van  provìnzie grìnst aan t [[Ems (revier)|Ems]]-[[Dollart]] [[estuoariom]]. In  streek om en bie dit estuoariom is inloop van  tied  bult grond biekommen. Omgeevm wordt veural kenmaarkt deur herenboeren mit schiere kapitoale [[Boerderieje|stees]] en leutje aarbaidershoeskes der noast. Naarns in Grunnen was t verschil tuzzen riek en aarm zo groot as in dit Oldambtster gewest. Vandoar ook dat der juust in t [[Oldambt (streek)|Oldambt]] n [[kommunisme|kommunistische]] partij ontstoan is. Dizze was tot 2006 aan tou  grootste partij in de gemainteroad van gemainte [[Reiderlaand (gemainte)|Reiderlaand]]. 
+t Noordoosten van  provìnzie grìnst aan t [[Ems (revier)|Ems]]-[[Dollart]] [[estuoariom]]. In  streek om en bie dit estuoariom is inloop van  tied  bult grond biekommen. Omgeevm wordt veural kenmaarkt deur herenboeren mit schiere kapitoale [[Boerderieje|stees]] en leutje aarbaidershoeskes der noast. Naargnswoar in Grunnen was t verschil tuzzen riek en aarm zo groot as in dit Oldambtster west. Vandoar ook dat der juust in t [[Oldambt (streek)|Oldambt]] n [[kommunisme|kommunistische]] partij ontstoan is. Dizze was tot 2006 aan tou  grootste partij in de gemainteroad van gemainte [[Reiderlaand (gemainte)|Reiderlaand]]. 
 
 [[Ofbeelding:Reitdiep Dorkwerd1245.jpg|right|250px|thumb|Het [[Raitdaip]] bie [[Dörkwerd]] ]]
-Onder t westelke dail van dit gebied (Fivelgo), ligt n grode [[eerdgas]]bel dij lèste joaren oereg leeg wordt. Hai is bie [[Slochter (dörp)|Slochter]] vonden en drogt den ook de noam ''Slochteren''. t Is nait zo dat de gasbel zoch allend bie Slochter bevindt. Hai rekt zoch grofweg oet van [[Hoogezaand]] tot [[n Daam]] en van [[Middelstom]] tot [[Noordbrouk]] tou. t Vermindern van de drok in de ondergrondse eerdloagen zòrgt terveur dat grond zakt.
+Onder t westelke dail van dit gebied (Fivelgo), ligt n grode [[eerdgas]]bel dij lèste joaren oereg leeg wordt. Hai is bie [[Slochter (dörp)|Slochter]] vonden en drogt den ook de noam ''Slochteren''. t Is nait zo dat de gasbel zoch allend bie Slochter bevindt. Hai rekt zoch grofweg oet van [[Hoogezaand]] tot [[n Daam]] en van [[Middelstom]] tot [[Noordbrouk]] tou. t Vermindern van de drok in de ondergrondse eerdloagen zòrgt terveur dat grond zakken dut.
 
 t Zuudoosten, de [[Veenkolonien]], was oorspronkelk n oetstrekt [[Vene (grondsoorte)|hoogveengebied]] dat vanôf  [[17e eeuw|17e aiw]] ontklaind en in kultuur brocht worden is. Oet dij tied resteert n oetgebraaid stelsel van [[knoal (woaterweg)|knoalen]]. Traditsjoneel wörren hier veural fabriekseerdappels verbaauwd. Tegenswoordeg binnen der nog môr drij [[AVEBE]]-febrieken over, woarvan  ainege verwaarkensfebriek bie [[Troapelknoal]] staait.
 
-Oostelk van de Veenkolonien en t Oldambt ligt [[Westerwoolde (streek)|Westerwolde]], n streek op zaandgrond. Hier ligt t hoogste punt van Grunnen, de [[Hassebaarg]]. Dizze streek wordt kenmaarkt deur n glooiend laandschop mit veul bozzen en [[neander]]rivierkes.
+Oostelk van de Veenkolonien en t Oldambt ligt [[Westerwoolde (streek)|Westerwolde]], n streek op zaandgrond. Hier ligt t hoogste stee van Grunnen, de [[Hassebaarg]]. Dizze streek wordt kenmaarkt deur n glooiend laandschop mit veul bozzen en [[neander]]rivierkes.
 
 Ook t [[Westerkertaaier]], in t westen van t provìnzie, ligt op n laange zaandrog. Dit is n oetloper van de [[Hondsrog]]. t Het wat laandschop betreft veul van de [[Friese Woolden|Fraise Wolden]]. 
 
