*Empty MediaWiki Message*

--- a/Iowa.mw
+++ b/Iowa.mw
@@ -1,4 +1,4 @@
-'''Iowa''' (spreak uut: ''AI-jo-wa'', [[engels]]ke uutspråke {{IPA|ˈaɪəwə}}) is nen ståt in de [[Vereynigde Ståten van Amerika]]. Et ligget tüsken de rivyren de [[mississippi (rivyr)|Mississippi]] (oust) en de [[Missouri (rivyr)|Missouri]] en [[Groute Siouxrivyr]] (west). Et grenset an ses andere ståten: [[Wiskonsin]] up et noordwesten, [[Illinois]] up et ousten, [[Missouri]] up et süden, [[Nebraska]] up et westen, [[Süüd Dakota]] up et noordwesten en [[Minnesota]] up et noorden.
+'''Iowa''' (spreak uut: ''AI-jo-wa'', [[engels]]ke uutspråke {{IPA|/ˈaɪəwə/}}) is nen ståt in de [[Vereynigde Ståten van Amerika]]. Et ligget tüsken de rivyren de [[mississippi (rivyr)|Mississippi]] (oust) en de [[Missouri (rivyr)|Missouri]] en [[Groute Siouxrivyr]] (west). Et grenset an ses andere ståten: [[Wiskonsin]] up et noordwesten, [[Illinois]] up et ousten, [[Missouri]] up et süden, [[Nebraska]] up et westen, [[Süüd Dakota]] up et noordwesten en [[Minnesota]] up et noorden.
 
 In [[kolonialisme|koloniale tyden]] was Iowa deyl van [[Fransk Louisiana]] en [[Spaansk Louisiana]]. De ståtsvlagge is noch altyd baseerd up de vlagge van [[Frankryk]]. Rap nå den [[Anskaf van Louisiana]] begünnen de lüde med [[landbouw]], wårup de lokale [[ekonomy]] slim sul gån löänen. Iowa ligt midden in de geografiske [[Maisgördel]].<ref>[https://web.archive.org/web/20090604163710/http://www.uiowa.edu/~osa/learn/historic/hisper.htm  (''Archiveerd'') Merry, Carl A. (1996) "The Historic Period". Office of the State Archeologist at the University of Iowa.] Bekeaken up 29 juni 2009.</ref>
 
