--- a/Evolutietheorie.mw
+++ b/Evolutietheorie.mw
@@ -9,7 +9,7 @@ De idees van Darwin ha'j der nie zo mar. Verre van te veuren en ok in zien tied 
 [[Charles Darwin]] leefden tussen 1809 en 1882. In die tied deun de measte van 't westerse volk de netuurlike theologie an. Da betekkend da'ze geleuven dat aals emaakt is deur 'n scheppergod. D' Eerde zol ok mar eankele duzenden joaren oald ween. Voalns disse lere zol aals wat lef nooit veraandern en könt soorten ok nie uut starven.
 
 ===De Verlechting===
-halfwegen de zestiende ewe göngen luu der zuuties an aans oaver deanken. Dn Fraanskeerl George Cuvier ontdekken, an 't eande van disse ewe, da'j de geschiedenisse van 't leven achter an könt met fosielen ofdrökken. Ok zaggen e dat de fosielen din dieper in n grond lagen minder liekt as op de fosielen die'j boaven vind. Hieruut deun de konklusie dat soorten zeakers wel uut starven könt.
+hoalfwegen de zestiende ewe göngen luu der zuuties an aans oaver deanken. Dn Fraanskeerl George Cuvier ontdekken, an 't eande van disse ewe, da'j de geschiedenisse van 't leven achter an könt met fosielen ofdrökken. Ok zaggen e dat de fosielen din dieper in n grond lagen minder liekt as op de fosielen die'j boaven vind. Hieruut deun de konklusie dat soorten zeakers wel uut starven könt.
 
 De Schotse geologen James Hutton en Charles Lyell ontdekken in dezölven tied dat d' eerde vörmd is deur netuurlik gebeuren. En dat d' Eerde heanig an, en de hele tied verdan, veraanderd. Dus nie deur rappe gebeurtenissen. Dus mos de Eerde völle moalen oaler ween as eankele duzenden joaren.
 
