fix homoglyphs: convert Latin characters in Захарав[i]ч to Cyrillic

--- a/Marc_Chagall.mw
+++ b/Marc_Chagall.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Marc Chagall 1941.jpg|thumb|Marc Chagall in een foto uut 1941 deur Carl Van Vechten]]
-'''Marc Chagall''' ([[Jiddisch]] : מאַרק שאַגאַל ; [[Russisch]]: Марк Захарович Шагал; [[Wit-Russisch]]: Марк Захаравiч Шаґал), geboren as '''Moïshe Zakharovich Shagalov''' (bel. Мойша Захаравіч Шагалаў) was een [[Jeude|Jeudse]] [[skilderkeunst|skilder]], geboren in [[Vitebsk]] ([[Wit-Ruslaand]], doedertied [[Keizerriek Ruslaand]]) op [[7 juli]] [[1887]]. Hi'j sturf op [[28 meert]] [[1985]] in [[Saint-Paul, Alpes-Maritimes|Saint-Paul de Vence]] ([[Fraankriek]]).
+'''Marc Chagall''' ([[Jiddisch]] : מאַרק שאַגאַל ; [[Russisch]]: Марк Захарович Шагал; [[Wit-Russisch]]: Марк Захаравіч Шаґал), geboren as '''Moïshe Zakharovich Shagalov''' (bel. Мойша Захаравіч Шагалаў) was een [[Jeude|Jeudse]] [[skilderkeunst|skilder]], geboren in [[Vitebsk]] ([[Wit-Ruslaand]], doedertied [[Keizerriek Ruslaand]]) op [[7 juli]] [[1887]]. Hi'j sturf op [[28 meert]] [[1985]] in [[Saint-Paul, Alpes-Maritimes|Saint-Paul de Vence]] ([[Fraankriek]]).
 
 Mit [[Pablo Picasso|Picasso]] is Chagall ien van de veurnaemste keunstenaors die in de [[20e eeuw|20e ieuw]] in Fraankriek daelestreken. Et is nog slim lastig om Chagall zien wark te kenmarken. In et [[Paries]] van veur de [[Eerste Wereldoorlog]] was hi'j doende in avant-gardistische stromings. Hi'j had een nauwe baand mit de [[Skoele van Paries]] en de uutdraegers daorvan, waoronder [[Amadeo Modigliani]].
 
