fix homoglyphs: convert Cyrillic characters in P[ё]tr to Latin

--- a/Peter_Kropotkin.mw
+++ b/Peter_Kropotkin.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Kropotkin Nadar.jpg|thumb|Peter Kropotkin]]
 [[Bestaand:Olsufyev House Dmitrov.jpg|thumb|'t Huus van Olsufjev in Dmitrov waor as Kropotkin tussen 1917 en 1921 woond hef.]]
 
-'''Pjotr Aleksejevitsj Kropotkin''' ([[Russisch|Russies]]: Пётр Алексеевич Кропоткин, Pёtr Alekseevitsj Kropotkin) ([[Moskou (stad)|Moskou]], [[9 december]] [[1842]] – [[Dmitrov]], [[8 febrewaori|8 februari]] [[1921]]) was 'n Russiese vorst, revolutionair en [[anarchist]]; theoreticus van 't anarchisme, geograaf en geoloog.
+'''Pjotr Aleksejevitsj Kropotkin''' ([[Russisch|Russies]]: Пётр Алексеевич Кропоткин, Pëtr Alekseevitsj Kropotkin) ([[Moskou (stad)|Moskou]], [[9 december]] [[1842]] – [[Dmitrov]], [[8 febrewaori|8 februari]] [[1921]]) was 'n Russiese vorst, revolutionair en [[anarchist]]; theoreticus van 't anarchisme, geograaf en geoloog.
 
 Kropotkin was van 1872 töt 1874 lid van 't grupien van de 'tsjajkovisen', 'n revolutionaire grupering in Sint-Petersbarg. Hi'j voerden revolutionaire propaganda onder de warkers in de stad. Naor zien ontsnapping uut de gevangenisse in de Petrus-en Paulusvesting in 1878 hef e zich nood edwungn töt 1917 mutten verbargn in 't butenlaand. En hi'j was daor lid van anarchistiese grupen. Kropotkin publiceerden op 't gebied van ethiek, de sociologie en de geschieddenisse van de Fraanse Revolutie. In 1902 verschenen zien memoires: Herinneringn van 'n revolutionair.
 
