--- a/Konrad_Adenauer.mw
+++ b/Konrad_Adenauer.mw
@@ -1,3 +1,4 @@
+[[Bestaand:Bundesarchiv B 145 Bild-F078072-0004, Konrad Adenauer.jpg|duum|Konrad Adenauer]]
 '''Konrad Hermann Joseph Adenauer''' (Köln, 5 january 1876 - 19 april 1967) was een düütske  politieker un wonnen de eerste [[bondskanselier]] van de [[Bondsrippebliek Duutslaand]].
 
 [[Kategorie:Duutslaand]]
