*Empty MediaWiki Message*

--- a/Akteur.mw
+++ b/Akteur.mw
@@ -1,3 +1,5 @@
+[[File:Atkinson Rowan.jpg|thumb|Aktrice]]
+
 Nen '''Akteur''' of ne ''aktrice'' is der ene den't n [[karakter]] oetbeeldt in n verhaal of rolnspel.
 
 Nen akteur kan in verskilnde vuurstellings spöln, zo as in t [[Theater (keunstvorm)|theater]], vuur de [[tellevisie]], in nen [[film (cinematografie)|film]], as trainingsakteur bie [[kommunikasietraining]]. Ook kan he in [[teeknfilm]]s ne stemme insprekn, of in reklamefilmkes. Elk van disse vuurstellings mut op ne bepoalde akteermanere benöaderd wordn.
