--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -9,7 +9,7 @@
 | oppervlak = 
 | oppervlak laand =
 | oppervlak water =
-| inwoners = 
+| inwoners = 500.000
 | doatum inwoners = 
 | dichtheid = 
 | breedtegroad = 52/0/45/N
